<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE project [
        <!ELEMENT project (modelVersion|groupId|artifactId|version|properties|dependencies|build)*>
        <!ATTLIST project
                xmlns CDATA #REQUIRED
                xmlns:xsi CDATA #REQUIRED
                xsi:schemaLocation CDATA #REQUIRED>
        <!ELEMENT modelVersion (#PCDATA)>
        <!ELEMENT groupId (#PCDATA)>
        <!ELEMENT artifactId (#PCDATA)>
        <!ELEMENT version (#PCDATA)>
        <!ELEMENT properties (maven.compiler.source|maven.compiler.target|aspectj.version|extentreports-version)*>
        <!ELEMENT maven.compiler.source (#PCDATA)>
        <!ELEMENT maven.compiler.target (#PCDATA)>
        <!ELEMENT aspectj.version (#PCDATA)>
        <!ELEMENT extentreports-version (#PCDATA)>
        <!ELEMENT dependencies (dependency)*>
        <!ELEMENT dependency (groupId|artifactId|version)*>
        <!ELEMENT build (plugins)*>
        <!ELEMENT plugins (plugin)*>
        <!ELEMENT plugin (groupId|artifactId|version|configuration|dependencies)*>
        <!ELEMENT configuration (source|target|forkCount|reuseForks|argLine|suiteXmlFiles)*>
        <!ELEMENT source (#PCDATA)>
        <!ELEMENT target (#PCDATA)>
        <!ELEMENT forkCount (#PCDATA)>
        <!ELEMENT reuseForks (#PCDATA)>
        <!ELEMENT argLine (#PCDATA)>
        <!ELEMENT suiteXmlFiles (suiteXmlFile)*>
        <!ELEMENT suiteXmlFile (#PCDATA)>
        ]>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>iTWO4-BASE-AUTO-FRAMEWORK-V.2.0</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <aspectj.version>1.9.5</aspectj.version>
        <!--<extentreports-version>5.0.8</extentreports-version>-->
        <extentreports-version>4.1.7</extentreports-version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.1.1</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.0.3</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.4.0</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>2.13.5</version>
        </dependency>

        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>

        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>${extentreports-version}</version>
        </dependency>


        <dependency>
            <groupId>com.paulhammant</groupId>
            <artifactId>ngwebdriver</artifactId>
            <version>1.1.6</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.gmbal</groupId>
            <artifactId>gmbal</artifactId>
            <version>4.0.3</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>4.1.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>

        <dependency>
            <groupId>org.apache.xmlbeans</groupId>
            <artifactId>xmlbeans</artifactId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.14.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.14.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.codoid.products/fillo -->
        <dependency>
            <groupId>com.codoid.products</groupId>
            <artifactId>fillo</artifactId>
            <version>1.21</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
        <!--dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.9.9.1</version>
            <scope>runtime</scope>
        </dependency-->

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <!--  <forkCount>3</forkCount>
                      <reuseForks>true</reuseForks>
                      <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->

                    <suiteXmlFiles>
                       <suiteXmlFile>src/test/resources/iTWO_TestRunners/ConnectSmokeERFQ.xml</suiteXmlFile>
                        <!--suiteXmlFile>src/test/resources/iTWO_TestRunners/ConnectSmokeTestngNoneRFQ.xml</suiteXmlFile-->
                        <!--suiteXmlFile>src/test/resources/iTWO_TestRunners/BusinessPartner.xml</suiteXmlFile-->
                        <!--suiteXmlFile>src/test/resources/iTWO_TestRunners/ProjectModule.xml</suiteXmlFile-->
                    </suiteXmlFiles>

                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>